--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 Time format:
 <input type="radio" id="hex" name="time" value="6" checked="checked" /> <sup>1</sup>&frasl;<sub>60</sub>
 <input type="radio" id="dec" name="time" value="10" /> <sup>1</sup>&frasl;<sub>10</sub>
-<textarea id="gps" name="gps" rows="20" cols="100" inputmode="decimal" "></textarea>
+<textarea id="gps" name="gps" rows="20" cols="100" inputmode="verbatim" "></textarea>
 
 <br><br><button>Calculate</button> Sum: <span id="timeSum"> 00:00</span>
 <hr>
@@ -32,7 +32,7 @@ $('button').click(function(){
 	  var arrayOfLines = $('#gps').val().split('\n');
 	  if($('#hex').is(':checked')) {  
 		$.each(arrayOfLines, function(index, item) {
-		t1 = item.split(/,|./)
+		t1 = item.split('.')
 		hrs = hrs + parseInt(t1[0])
 		mins = mins + parseInt(t1[1])
         });
