--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 Time format:
 <input type="radio" id="hex" name="time" value="6" checked="checked" /> <sup>1</sup>&frasl;<sub>60</sub>
 <input type="radio" id="dec" name="time" value="10" /> <sup>1</sup>&frasl;<sub>10</sub>
-<textarea id="gps" name="gps" rows="20" cols="100" inputmode="verbatim" "></textarea>
+<textarea id="gps" name="gps" rows="20" cols="100"></textarea>
 
 <br><br><button>Calculate</button> Sum: <span id="timeSum"> 00:00</span>
 <hr>
